--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li><a href="#ml">Use ML Learn Business</a></li>
 						<li><a href="#nlp">Apply NLP Read World</a></li>
 						<li><a href='#ds'>Explore DS</a></li>
-						<li><a href="#contactme">Contact Me</a></li>
+						<!-- <li><a href="#contactme">Contact Me</a></li> -->
 					</ul>
 				</nav>
 				<footer>
@@ -57,7 +57,7 @@
 										<p>A passionate data science practicer<br /> 
 										      <a href="pdf/Resume_IreneYang.pdf" download>My Resume</a> :)</p>
 									</header>
-									<p>I'm a passionate and self-driving data science practicer based in San Francisco, CA. <br /> I'm working extenstively on data analytics, applied ML and NLP.</p>
+									<p>I'm a passionate and self-driven data science practicer based in San Francisco, CA. <br /> I'm working extenstively on data analytics, applied ML and NLP.</p>
 								</div>
 							</section>
 
@@ -86,14 +86,14 @@
 										<article>
 											<a href="https://docs.google.com/presentation/d/1iplzIa1wCSp3Rqu_qZS3FaVHslR9NRI9p60RaM6O3qY/edit?usp=sharing" class="image"><img src="images/purchase.png" alt="" /></a>
 											<div class="inner">
-												<h4>Mobile In-App Purchase Prediction</h4>
+												<a href="https://docs.google.com/presentation/d/1iplzIa1wCSp3Rqu_qZS3FaVHslR9NRI9p60RaM6O3qY/edit?usp=sharing"><h4>Mobile In-App Purchase Prediction</h4></a>
 												<p>Predict user purchase within next 7 days and 14 days. Use time series feature engineering and a stack of classifers to boostt performance.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/ml-bestgroup/Google_Analytics_Customer_Revenue_Prediction" class="image"><img src="images/google_shopping.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Google Analytics Customer Revenue Prediction</h4>
+												<a href="https://github.com/ml-bestgroup/Google_Analytics_Customer_Revenue_Prediction"><h4>Google Analytics Customer Revenue Prediction</h4></a>
 												<p>Use session-level data to predict user-level e-commerce revenue for Google GStore.</p>
 											</div>
 										</article>
@@ -111,20 +111,20 @@
 						<!-- Four -->
 							<section id="nlp">
 								<div class="container">
-									<h3>Apply NLP to read the world</h3>
+									<h3>Apply NLP to Read the World</h3>
 									<p>NLP related projects including topic modeling, keywords extraction and sentiment analysis.</p>
 									<div class="features">
 										<article>
 											<a href="https://medium.com/reputation-com-datascience-blog/keywords-extraction-with-ngram-and-modified-skip-gram-based-on-spacy-14e5625fce23" class="image"><img src="images/keywords.png" alt="" /></a>
 											<div class="inner">
-												<h4>Keywords Extraction Tool</h4>
+												<a href="https://medium.com/reputation-com-datascience-blog/keywords-extraction-with-ngram-and-modified-skip-gram-based-on-spacy-14e5625fce23"><h4>Keywords Extraction Tool</h4></a>
 												<p>Flexible multigram non-consecutive keywords extraction tool that applied to identify customer concerns.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Newsfeed_Product" class="image"><img src="images/news.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Newsfeed Product Development</h4>
+												<a href="https://github.com/IreneYang218/Newsfeed_Product"><h4>Newsfeed Product Development</h4></a>
 												<p>Analytic newsfeed product with recent topics controversy and authors impact analysis.</p>
 											</div>
 										</article>
@@ -148,35 +148,35 @@
 										<article>
 											<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets" class="image"><img src="images/parkingtickets.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Distributed NYC Parking Tickets Clustering Analysis</h4>
+												<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets"><h4>Distributed NYC Parking Tickets Clustering Analysis</h4></a>
 												<p>Parking violation clustering based on car characteristics and travel time. Compared the financial and time efficiency of different AWS EMR configures. Paper has been accepted by the 3rd IEEE SCI. </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction" class="image"><img src="images/bankruptcy.png" alt="" /></a>
 											<div class="inner">
-												<h4>Cannada Bankruptcy Rate Prediction</h4>
+												<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction"><h4>Cannada Bankruptcy Rate Prediction</h4></a>
 												<p>Predict 3 years bankruptcy rate in Canadata using different traditional time series models.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/DataViz_Airbnb" class="image"><img src="images/airbnb.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Data Visualization: Airbnb in SF</h4>
+												<a href="https://github.com/IreneYang218/DataViz_Airbnb"><h4>Data Visualization: Airbnb in SF</h4></a>
 												<p>Analyze the geographic pattern and hosts characteristics of Airbnb listings in San Francisco using Tableau. </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation" class="image"><img src="images/ml_algorithm.png" alt="" /></a>
 											<div class="inner">
-												<h4>Machine Learning Algorithm Implementatoin</h4>
+												<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation"><h4>Machine Learning Algorithm Implementatoin</h4></a>
 												<p>Implement isolation forest, gradient boosting ... from scrach </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Qichachascrapy" class="image"><img src="images/scrapping.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Qichacha Web Scrapping</h4>
+												<a href="https://github.com/IreneYang218/Qichachascrapy"><h4>Qichacha Web Scrapping</h4></a>
 												<p>Scrapping company public information using Scrapy </p>
 											</div>
 										</article>
@@ -185,7 +185,7 @@
 							</section>
 
 						<!-- Six -->
-							<section id="contactme">
+							<!-- <section id="contactme">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Open to discuss data science questions and opportunities. Contact me if you want further discussion.</p>
@@ -204,7 +204,7 @@
 										</div>
 									</form>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Five -->
 						<!--
