--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 									<ul class="feature-icons">
 										<li class="fa-code">Python(PyTorch), SQL, NoSQL(MongoDB), R</li>
 										<li class="fa-book">NLP, ML, Experimental Design (AB Testing), Statistics</li>
-										<li class="fa-cubes">AWS(S3, EC2, EMR), GCP, Git, Spark, Hive, Tableau</li>
-										<li class="fa-coffee">CFA Level 1 Passed</li>
+										<li class="fa-mixcloud">AWS(S3, EC2, EMR), GCP, Git, Spark, Hive, Tableau</li>
+										<li class="fa-money-check-alt">CFA Level 1 Passed</li>
 										<!-- <li class="fa-bolt">Lightning bolt</li>
 										<li class="fa-users">Shadow clone technique</li> -->
 									</ul>
@@ -176,8 +176,8 @@
 										<article>
 											<a href="https://github.com/IreneYang218/Qichachascrapy" class="image"><img src="images/scrapping.jpg" alt="" /></a>
 											<div class="inner">
-												<a href="https://github.com/IreneYang218/Qichachascrapy"><h4>Qichacha Web Scrapping</h4></a>
-												<p>Scrapping company public information using Scrapy </p>
+												<a href="https://github.com/IreneYang218/Qichachascrapy"><h4>Qichacha Web Scraping</h4></a>
+												<p>Scraping company public information using Scrapy </p>
 											</div>
 										</article>
 									</div>
