--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#aboutme" class="active">About Me</a></li>
-						<li><a href="#skills">Skills I Have</a></li>
-						<li><a href="#ml">Use ML Learn Business</a></li>
-						<li><a href="#nlp">Apply NLP Read World</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#ml">ML for Business</a></li>
+						<li><a href="#nlp">Text Mining (NLP)</a></li>
 						<li><a href='#ds'>Explore DS</a></li>
 						<!-- <li><a href="#contactme">Contact Me</a></li> -->
 					</ul>
@@ -54,10 +54,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>A passionate data science practicer<br /> 
+										<p>A passionate data science practitioner<br /> 
 										      <a href="pdf/Resume_IreneYang.pdf" download>My Resume</a> :)</p>
 									</header>
-									<p>I'm a passionate and self-driven data science practicer based in San Francisco, CA. <br /> I'm working extenstively on data analytics, applied ML and NLP.</p>
+									<p>I'm a passionate and self-driven data science practitioner based in San Francisco, CA. <br /> I'm working extenstively on data analytics, applied ML and NLP.</p>
 								</div>
 							</section>
 
@@ -65,12 +65,12 @@
 							<section id="skills">
 								<div class="container">
 									<h3>Skills I Have</h3>
-									<p>Mix background with DS, Economics and Finance</p>
+									<p>Mixed background with DS, Economics and Finance</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Python(PyTorch), SQL, NoSQL(MongoDB), R</li>
 										<li class="fa-book">NLP, ML, Experimental Design (AB Testing), Statistics</li>
 										<li class="fa-mixcloud">AWS(S3, EC2, EMR), GCP, Git, Spark, Hive, Tableau</li>
-										<li class="fa-money-check-alt">CFA Level 1 Passed</li>
+										<li class="fa-comment-dollar">CFA Level 1 Passed</li>
 										<!-- <li class="fa-bolt">Lightning bolt</li>
 										<li class="fa-users">Shadow clone technique</li> -->
 									</ul>
@@ -81,13 +81,13 @@
 							<section id="ml">
 								<div class="container">
 									<h3>Use Machine Learning to Learn the Business</h3>
-									<p>Machine Learning projects on real-world business problem. Focus on exploratory data analysis, feature engineering and modeling</p>
+									<p>Machine Learning projects applied to real-world business problems. Focus is on exploratory data analysis, feature engineering and modeling</p>
 									<div class="features">
 										<article>
 											<a href="https://docs.google.com/presentation/d/1iplzIa1wCSp3Rqu_qZS3FaVHslR9NRI9p60RaM6O3qY/edit?usp=sharing" class="image"><img src="images/purchase.png" alt="" /></a>
 											<div class="inner">
 												<a href="https://docs.google.com/presentation/d/1iplzIa1wCSp3Rqu_qZS3FaVHslR9NRI9p60RaM6O3qY/edit?usp=sharing"><h4>Mobile In-App Purchase Prediction</h4></a>
-												<p>Predict user purchase within next 7 days and 14 days. Use time series feature engineering and a stack of classifers to boostt performance.</p>
+												<p>Predict user purchase within next 7 days and 14 days. Use time series feature engineering and a stack of classifers to boost the performance.</p>
 											</div>
 										</article>
 										<article>
@@ -112,20 +112,20 @@
 							<section id="nlp">
 								<div class="container">
 									<h3>Apply NLP to Read the World</h3>
-									<p>NLP related projects including topic modeling, keywords extraction and sentiment analysis.</p>
+									<p>NLP-related projects including topic modeling, keyword extraction and sentiment analysis.</p>
 									<div class="features">
 										<article>
 											<a href="https://medium.com/reputation-com-datascience-blog/keywords-extraction-with-ngram-and-modified-skip-gram-based-on-spacy-14e5625fce23" class="image"><img src="images/keywords.png" alt="" /></a>
 											<div class="inner">
-												<a href="https://medium.com/reputation-com-datascience-blog/keywords-extraction-with-ngram-and-modified-skip-gram-based-on-spacy-14e5625fce23"><h4>Keywords Extraction Tool</h4></a>
-												<p>Flexible multigram non-consecutive keywords extraction tool that applied to identify customer concerns.</p>
+												<a href="https://medium.com/reputation-com-datascience-blog/keywords-extraction-with-ngram-and-modified-skip-gram-based-on-spacy-14e5625fce23"><h4>Keyword Extraction Tool</h4></a>
+												<p>Flexible multigram non-consecutive keywords extraction tool applied to identify customer concerns.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Newsfeed_Product" class="image"><img src="images/news.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Newsfeed_Product"><h4>Newsfeed Product Development</h4></a>
-												<p>Analytic newsfeed product with recent topics controversy and authors impact analysis.</p>
+												<p>Analytic newsfeed product with controversy of topics and author's impact analysis.</p>
 											</div>
 										</article>
 										<!-- <article>
@@ -149,13 +149,13 @@
 											<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets" class="image"><img src="images/parkingtickets.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets"><h4>Distributed NYC Parking Tickets Clustering Analysis</h4></a>
-												<p>Parking violation clustering based on car characteristics and travel time. Compared the financial and time efficiency of different AWS EMR configures. Paper has been accepted by the 3rd IEEE SCI. </p>
+												<p>Parking violation clustering based on car characteristics and travel time. Compared the financial and time efficiency of different AWS EMR configurations. Paper has been accepted by the 3rd IEEE SCI. </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction" class="image"><img src="images/bankruptcy.png" alt="" /></a>
 											<div class="inner">
-												<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction"><h4>Cannada Bankruptcy Rate Prediction</h4></a>
+												<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction"><h4>Canada Bankruptcy Rate Prediction</h4></a>
 												<p>Predict 3 years bankruptcy rate in Canadata using different traditional time series models.</p>
 											</div>
 										</article>
@@ -163,13 +163,13 @@
 											<a href="https://github.com/IreneYang218/DataViz_Airbnb" class="image"><img src="images/airbnb.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/DataViz_Airbnb"><h4>Data Visualization: Airbnb in SF</h4></a>
-												<p>Analyze the geographic pattern and hosts characteristics of Airbnb listings in San Francisco using Tableau. </p>
+												<p>Analyze the geographic pattern and host characteristics of Airbnb listings in San Francisco using Tableau. </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation" class="image"><img src="images/ml_algorithm.png" alt="" /></a>
 											<div class="inner">
-												<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation"><h4>Machine Learning Algorithm Implementatoin</h4></a>
+												<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation"><h4>Machine Learning Algorithm Implementation</h4></a>
 												<p>Implement isolation forest, gradient boosting ... from scrach </p>
 											</div>
 										</article>
