--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<li class="fa-code">Python(PyTorch), SQL, NoSQL(MongoDB), R</li>
 										<li class="fa-book">NLP, ML, Experimental Design (AB Testing), Statistics</li>
 										<li class="fa-mixcloud">AWS(S3, EC2, EMR), GCP, Git, Spark, Hive, Tableau</li>
-										<li class="fa-comment-dollar">CFA Level 1 Passed</li>
+										<li class="fa-calculator">CFA Level 1 Passed</li>
 										<!-- <li class="fa-bolt">Lightning bolt</li>
 										<li class="fa-users">Shadow clone technique</li> -->
 									</ul>
