--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="image avatar"><img src="images/avatar.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Irene Yang</a></h1>
 					<p>Data Lover<br />
-					ML & NLP Practicer</p>
+					ML & NLP Practioner</p>
 				</header>
 				<nav id="nav">
 					<ul>
