change side bar

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 											<a href="https://github.com/IreneYang218/Qichachascrapy" class="image"><img src="images/scrapping.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Qichachascrapy"><h4>Qichacha Web Scraping</h4></a>
-												<p>Scraping company public information using Scrapy </p>
+												<p>Scrap company public information using Scrapy </p>
 											</div>
 										</article>
 									</div>
