--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 											<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets" class="image"><img src="images/parkingtickets.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Distributed_Clustering_Analysis_for_NYC_Parking_Tickets"><h4>Distributed NYC Parking Tickets Clustering Analysis</h4></a>
-												<p>Parking violation clustering based on car characteristics and travel time. Compared the financial and time efficiency of different AWS EMR configurations. Paper has been accepted by the 3rd IEEE SCI. </p>
+												<p>Parking violation clustering based on car characteristics and travel time. Compare the financial and time efficiency of different AWS EMR configurations. Paper has been accepted by the 3rd IEEE SCI. </p>
 											</div>
 										</article>
 										<article>
