--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<p>A passionate data science practitioner<br /> 
 										      <a href="pdf/Resume_IreneYang.pdf" download>My Resume</a> :)</p>
 									</header>
-									<p>I'm a passionate and self-driven data science practitioner based in San Francisco, CA. <br /> I'm working extenstively on data analytics, applied ML and NLP.</p>
+									<p>I'm a passionate and self-driven data science practitioner based in San Francisco, CA. <br /> I'm working extensively on data analytics, applied ML and NLP.</p>
 								</div>
 							</section>
 
@@ -156,7 +156,7 @@
 											<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction" class="image"><img src="images/bankruptcy.png" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Bankruptcy_Rate_Prediction"><h4>Canada Bankruptcy Rate Prediction</h4></a>
-												<p>Predict 3 years bankruptcy rate in Canadata using different traditional time series models.</p>
+												<p>Predict 3 years bankruptcy rate in Canada using different traditional time series models.</p>
 											</div>
 										</article>
 										<article>
@@ -170,14 +170,14 @@
 											<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation" class="image"><img src="images/ml_algorithm.png" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/ML-Algorithm-Implementation"><h4>Machine Learning Algorithm Implementation</h4></a>
-												<p>Implement isolation forest, gradient boosting ... from scrach </p>
+												<p>Implement isolation forest, gradient boosting ... from scratch </p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/IreneYang218/Qichachascrapy" class="image"><img src="images/scrapping.jpg" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/IreneYang218/Qichachascrapy"><h4>Qichacha Web Scraping</h4></a>
-												<p>Scrap company public information using Scrapy </p>
+												<p>Scrape company public information using Scrapy </p>
 											</div>
 										</article>
 									</div>
